--- a/src/common.less
+++ b/src/common.less
@@ -12,6 +12,13 @@ body, html {
   width:100%;
   height:100%;
   margin:0;
+  display: flex;
+}
+
+.main-container {
+  flex: 1;
+  width:100%;
+  height:100%;
 }
 
 a {
@@ -43,6 +50,10 @@ input {
 input::-webkit-input-placeholder {
   color: #999999;
   opacity:1;
+}
+
+.clear {
+  clear: both;
 }
 
 
