--- a/src/common.less
+++ b/src/common.less
@@ -19,6 +19,9 @@ body, html {
   flex: 1;
   width:100%;
   height:100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 a {
