--- a/src/pages/home/home.less
+++ b/src/pages/home/home.less
@@ -1,10 +1,16 @@
 @import url('../../common.less');
 
+.header{
+  width: 100%;
+}
+
 .orderlist-container {
    width: 100%;
    height: 100%;
    background: white; 
    flex:1;
+   text-align: center;
+   position: relative;
 }
 
 .orderCard {
