--- a/src/common.css
+++ b/src/common.css
@@ -1,48 +1,33 @@
-
-@base-font-size: 14px;
-@base-font-bigSize: 16px;
-@base-font-smallSize: 12px;
-
-@baseColor: #e3e3e3;
-@base-color-white: white;
-@base-color-gray: gray;
-@base-color-blue: #40a9ff;
-
-
-body, html {
-  width:100%;
-  height:100%;
-  margin:0;
+body,
+html {
+  width: 100%;
+  height: 100%;
+  margin: 0;
   display: flex;
 }
-
 .main-container {
   flex: 1;
-  width:100%;
-  height:100%;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
 a {
   text-decoration: none;
 }
-
 img {
-  border:none;
+  border: none;
   padding: 0;
   margin: 0;
 }
-
 button {
-  border:none;
+  border: none;
   padding: 0;
   margin: 0;
   outline: none;
   cursor: pointer;
 }
-
 input {
   border: none;
   padding: 0;
@@ -50,15 +35,10 @@ input {
   outline: none;
   text-indent: 10px;
 }
-
 input::-webkit-input-placeholder {
   color: #999999;
-  opacity:1;
+  opacity: 1;
 }
-
 .clear {
   clear: both;
 }
-
-
-
