--- a/src/pages/login/Login.less
+++ b/src/pages/login/Login.less
@@ -2,75 +2,76 @@
 @import url('../../common.less');
 
 .login-container {
-    width:100%;
-    height:100%;
+    width: 100%;
+    height: 100%;
     display: flex;
-    justify-content:center;
+    justify-content: center;
     align-items: center;
     background-image: url(../../assets/images/login_bg.jpg);
     background-size: cover;
 
     .login-content {
         position: absolute;
-        top:50%;
-        left:50%;
-        width:500px;
-        height:500px;
+        top: 50%;
+        left: 50%;
+        width: 500px;
+        height: 500px;
         margin-top: -250px;
         margin-left: -250px;
         background: rgba(0, 0, 0, 0.6);
         border-radius: 5px;
 
         .logo {
-            width:80px;
-            height:80px;
-            position: absolute;
-            left:50%;
-            margin-left: -40px;
-            top:40px;
-            background-image:url(../../assets/images/logo.png);
+            display: block;
+            width: 80px;
+            height: 80px;
+            margin: 15% auto;
+            background-image: url(../../assets/images/logo.png);
             background-size: cover;
         }
 
-        .user-input, .verifycode-input {
-            width:90%;
-            height:45px;
-            margin-left: 5%;
-            font-size: @base-font-bigSize;
-            color: rgb(39, 39, 39);
-            border-radius: 3px;
-            background: rgba(255, 255, 255, 0.8);
-        }
-
-        .user-input {
-            margin-top: 35%;
-        }
-
-        .verifycode-input {
-            margin-top: 30px;
-        }
-
-        .submit-area {
+        .input-wrapper {
             display: flex;
+            flex-direction: row;
+            margin-top: 30px;
+            padding: 0 20%;
             justify-content: center;
-            margin: 30px 0 0 5%;
-            width: 90%;
-            .login-button {
-                height:60px;
-                background: rgb(102, 158, 38);
+            align-items: center;
+
+            .user-input, .verifycode-input {
+                width: 100%;
+                height: 45px;
                 font-size: @base-font-bigSize;
-                color: @base-color-white;
+                color: #333333;
                 border-radius: 3px;
-                flex:7;
+                background: rgba(255, 255, 255, 0.8);
             }
+            
             .verify-button {
-                width: 100px;
-                height: 60px;
-                background: rgb(41, 117, 189);
+                width: 160px;
+                height: 45px;
                 border-radius: 3px;
-                margin-left: 10px;
-                color: @base-color-white;
+                margin-left: 30px;
+                color: @base-color-blue;
                 font-size: @base-font-size;
+                border-color: @base-color-blue;
+                background: rgba(0, 0, 0, 0);
+            }
+            
+            .submit-area {
+                display: flex;
+                justify-content: center;
+                margin: auto;
+                width: 100%;
+                .login-button {
+                    height: 50px;
+                    background: @base-color-blue;
+                    font-size: @base-font-bigSize;
+                    color: @base-color-white;
+                    border-radius: 3px;
+                    flex: 7;
+                    border: 0;
+                }
             }
         }
     }
