--- a/src/pages/home/home.less
+++ b/src/pages/home/home.less
@@ -1,7 +1,7 @@
 @import url('../../common.less');
 
-.header{
-  width: 100%;
+.header {
+    width: 100%;
 }
 
 .logout {
@@ -10,114 +10,112 @@
 }
 
 .orderlist-container {
-   width: 100%;
-   height: 100%;
-   background: white; 
-   flex:1;
-   text-align: center;
-   position: relative;
+    width: 100%;
+    height: 100%;
+    background: white;
+    flex: 1;
+    text-align: center;
+    position: relative;
 }
 
 .orderCard {
-  width: 30%;
-  height: 250px;
-  float: left;
-  margin: 20px 0 0 2.5%;
-  background: lightgray;
-  border-radius: 5px;
-  overflow: hidden;
-  position: relative;
-
-  .time {
+    width: 30%;
+    height: 250px;
     float: left;
-    text-indent: 20px;
-    margin: 5px 0 0 0;
-  }
-
-  .avatar {
-    width:40px;
-    height:40px;
-    border-radius: 20px;
+    margin: 20px 0 0 2.5%;
+    background: lightgray;
+    border-radius: 5px;
     overflow: hidden;
-    margin: 10px 0 0 20px;
-    float: left;
-  }
+    position: relative;
 
+    .time {
+        float: left;
+        text-indent: 20px;
+        margin: 5px 0 0;
+    }
+
+    .avatar {
+        width: 40px;
+        height: 40px;
+        border-radius: 20px;
+        overflow: hidden;
+        margin: 10px 0 0 20px;
+        float: left;
+    }
 }
 
 .order-title {
-  width: 50%;
-  font-size: 18px;
-  text-align: left;
-  padding: 20px 0 0 20px;
-  float: left;
+    width: 50%;
+    font-size: 18px;
+    text-align: left;
+    padding: 20px 0 0 20px;
+    float: left;
 }
 
 .order-id {
-  font-size: 14px;
-  text-align: right;
-  padding: 20px 20px 0 0;
-  float:right;
+    font-size: 14px;
+    text-align: right;
+    padding: 20px 20px 0 0;
+    float: right;
 }
 
 .download-num {
-  position: absolute;
-  top: 50px;
-  right: 30px;
-  font-size: 18px;
-  color: #333;
+    position: absolute;
+    top: 50px;
+    right: 30px;
+    font-size: 18px;
+    color: #333;
 }
 
 .upload-num {
-  position: absolute;
-  top: 90px;
-  right: 30px;
-  font-size: 18px;
-  color: #333;
+    position: absolute;
+    top: 90px;
+    right: 30px;
+    font-size: 18px;
+    color: #333;
 }
 
 .order-subtitle {
-  font-size: 14px;
-  text-align: left;
-  padding: 10px 0 0 20px;
+    font-size: 14px;
+    text-align: left;
+    padding: 10px 0 0 20px;
 }
 
 .operation {
-  width: 100%;
-  height: 55px;
-  position: absolute;
-  bottom: 0;
-  left: 20px;
-  display: flex;
+    width: 100%;
+    height: 55px;
+    position: absolute;
+    bottom: 0;
+    left: 20px;
+    display: flex;
 
-  .start-button {
-    width:100px;
-    height:45px;
-    border-radius: 3px;
-    background: rgb(9, 177, 9);
-    margin-right: 10px;
-    color: white;
-    font-size: 14px;
-  }
+    .start-button {
+        width: 100px;
+        height: 45px;
+        border-radius: 3px;
+        background: rgb(9, 177, 9);
+        margin-right: 10px;
+        color: white;
+        font-size: 14px;
+    }
 
-  .end-button {
-    width:100px;
-    height:45px;
-    border-radius: 3px;
-    background: rgb(196, 151, 6);
-    color: white;
-    font-size: 14px;
-    margin-right: 10px;
-  }
+    .end-button {
+        width: 100px;
+        height: 45px;
+        border-radius: 3px;
+        background: rgb(196, 151, 6);
+        color: white;
+        font-size: 14px;
+        margin-right: 10px;
+    }
 
-  .ended-button {
-    width:100px;
-    height:45px;
-    border-radius: 3px;
-    background: rgb(203, 195, 171);
-    color: white;
-    font-size: 14px;
-    margin-right: 10px;
-  }
-
+    .ended-button {
+        width: 100px;
+        height: 45px;
+        border-radius: 3px;
+        background: rgb(203, 195, 171);
+        color: white;
+        font-size: 14px;
+        margin-right: 10px;
+    }
 }
