--- a/src/common.css
+++ b/src/common.css
@@ -6,13 +6,9 @@ html {
     display: flex;
 }
 
-.main-container {
-    flex: 1;
+.container {
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 a {
@@ -42,10 +38,50 @@ input {
 }
 
 input::-webkit-input-placeholder {
-    color: #999;
+    color: #aaa;
     opacity: 1;
 }
 
 .clear {
     clear: both;
+}
+
+.button {
+    position: relative;
+    cursor: pointer;
+}
+
+.btnMask {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.hoverStyle {
+    background: rgba(255, 255, 255, 0.25);
+}
+
+.clickStyle {
+    background: rgba(255, 255, 255, 0);
+}
+
+.tipWrapper {
+    position: relative;
+}
+
+.tipText {
+    position: absolute;
+    top: 24px;
+    left: 0;
+    padding: 5px 10px;
+    font-size: 14px;
+    border-radius: 5px;
+    background: rgba(0, 0, 0, 0.8);
+    overflow: visible;
+    color: #fff;
+    z-index: 2;
 }
