--- a/src/common.less
+++ b/src/common.less
@@ -9,56 +9,90 @@
 @base-color-blue: #40a9ff;
 
 
-body, html {
-  width:100%;
-  height:100%;
-  margin:0;
-  display: flex;
+body,
+html {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    display: flex;
 }
 
-.main-container {
-  flex: 1;
-  width:100%;
-  height:100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.container {
+    width: 100%;
+    height: 100%;
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 img {
-  border:none;
-  padding: 0;
-  margin: 0;
+    border: none;
+    padding: 0;
+    margin: 0;
 }
 
 button {
-  border:none;
-  padding: 0;
-  margin: 0;
-  outline: none;
-  cursor: pointer;
+    border: none;
+    padding: 0;
+    margin: 0;
+    outline: none;
+    cursor: pointer;
 }
 
 input {
-  border: none;
-  padding: 0;
-  margin: 0;
-  outline: none;
-  text-indent: 10px;
+    border: none;
+    padding: 0;
+    margin: 0;
+    outline: none;
+    text-indent: 10px;
 }
 
 input::-webkit-input-placeholder {
-  color: #999999;
-  opacity:1;
+    color: #aaa;
+    opacity: 1;
 }
 
 .clear {
-  clear: both;
+    clear: both;
 }
 
+.button {
+    position: relative;
+    cursor: pointer;
+}
 
+.btnMask {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+}
 
+.hoverStyle {
+    background: rgba(255, 255, 255, 0.25);
+}
+
+.clickStyle {
+    background: rgba(255, 255, 255, 0);
+}
+
+.tipWrapper {
+    position: relative;
+}
+
+.tipText {
+    position: absolute;
+    top: 24px;
+    left: 0;
+    padding: 5px 10px;
+    font-size: 14px;
+    border-radius: 5px;
+    background: rgba(0, 0, 0, 0.8);
+    overflow: visible;
+    color: #fff;
+    z-index: 2;
+}
