--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -6,13 +6,9 @@ html {
     display: flex;
 }
 
-.main-container {
-    flex: 1;
+.container {
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 a {
@@ -42,7 +38,7 @@ input {
 }
 
 input::-webkit-input-placeholder {
-    color: #999;
+    color: #aaa;
     opacity: 1;
 }
 
@@ -50,122 +46,248 @@ input::-webkit-input-placeholder {
     clear: both;
 }
 
-.header {
-    width: 100%;
+.button {
+    position: relative;
+    cursor: pointer;
 }
 
-.logout {
-    background: #09b109;
-    font-size: 14px;
-}
-
-.orderlist-container {
+.btnMask {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     width: 100%;
     height: 100%;
-    background: white;
-    flex: 1;
-    text-align: center;
+}
+
+.hoverStyle {
+    background: rgba(255, 255, 255, 0.25);
+}
+
+.clickStyle {
+    background: rgba(255, 255, 255, 0);
+}
+
+.tipWrapper {
     position: relative;
 }
 
-.orderCard {
-    width: 30%;
-    height: 250px;
-    float: left;
-    margin: 20px 0 0 2.5%;
-    background: lightgray;
+.tipText {
+    position: absolute;
+    top: 24px;
+    left: 0;
+    padding: 5px 10px;
+    font-size: 14px;
     border-radius: 5px;
-    overflow: hidden;
-    position: relative;
+    background: rgba(0, 0, 0, 0.8);
+    overflow: visible;
+    color: #fff;
+    z-index: 2;
 }
 
-.orderCard .time {
-    float: left;
-    text-indent: 20px;
-    margin: 5px 0 0;
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 124px;
+    align-self: flex-start;
+    background: #000;
+    z-index: 2;
 }
 
-.orderCard .avatar {
+.header .headerContent {
+    width: 960px;
+    height: 64px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header .headerContent .logo {
+    height: 36px;
+}
+
+.header .headerContent .userInfo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header .headerContent .userInfo .userAvatar {
+    display: block;
     width: 40px;
     height: 40px;
     border-radius: 20px;
-    overflow: hidden;
-    margin: 10px 0 0 20px;
-    float: left;
 }
 
-.order-title {
-    width: 50%;
-    font-size: 18px;
-    text-align: left;
-    padding: 20px 0 0 20px;
-    float: left;
+.header .headerContent .userInfo .userName {
+    font-size: 16px;
+    color: #fff;
+    line-height: 64px;
 }
 
-.order-id {
+.header .headerContent .userInfo .logout {
+    width: 90px;
+    height: 36px;
+    margin-left: 40px;
+    line-height: 36px;
+    text-align: center;
+    border-radius: 4px;
     font-size: 14px;
-    text-align: right;
-    padding: 20px 20px 0 0;
-    float: right;
+    color: #ccc;
+    border: 1px solid #999;
 }
 
-.download-num {
-    position: absolute;
-    top: 50px;
-    right: 30px;
-    font-size: 18px;
-    color: #333;
-}
-
-.upload-num {
-    position: absolute;
-    top: 90px;
-    right: 30px;
-    font-size: 18px;
-    color: #333;
-}
-
-.order-subtitle {
-    font-size: 14px;
-    text-align: left;
-    padding: 10px 0 0 20px;
-}
-
-.operation {
+.header .title {
+    position: relative;
     width: 100%;
-    height: 55px;
-    position: absolute;
-    bottom: 0;
-    left: 20px;
+    height: 60px;
+    font-size: 18px;
+    color: #000;
+    text-align: center;
+    line-height: 60px;
+    box-shadow: 0 2px 5px 2px #e1e1e1;
+    background: #fff;
+}
+
+body {
+    background-image: url(../../assets/images/content_bg.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.container {
+    padding-top: 124px;
+}
+
+.mainContainer {
+    position: relative;
+    width: 100%;
+    padding: 20px 0;
+    justify-content: center;
+    align-items: center;
+    background-image: url(../../assets/images/content_bg.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.orderContainer {
+    position: relative;
     display: flex;
+    flex-wrap: wrap;
+    width: 960px;
+    padding-left: 38px;
+    padding-bottom: 38px;
+    margin: auto;
+    background: #fff;
+    box-shadow: 0 4px 5px 1px #eee;
 }
 
-.operation .start-button {
-    width: 100px;
-    height: 45px;
+.orderWrapper {
+    width: 270px;
+    height: 380px;
+    margin-top: 36px;
+    margin-right: 36px;
+    border: 1px solid #eee;
     border-radius: 3px;
-    background: #09b109;
-    margin-right: 10px;
-    color: white;
-    font-size: 14px;
+    box-shadow: 0 0 2px 1px #eee;
 }
 
-.operation .end-button {
-    width: 100px;
-    height: 45px;
-    border-radius: 3px;
-    background: #c49706;
-    color: white;
-    font-size: 14px;
-    margin-right: 10px;
+.orderBanner {
+    display: block;
+    width: 100%;
+    height: 160px;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
 }
 
-.operation .ended-button {
-    width: 100px;
-    height: 45px;
-    border-radius: 3px;
-    background: #cbc3ab;
-    color: white;
-    font-size: 14px;
-    margin-right: 10px;
+.orderInfo {
+    padding: 10px 20px;
+    background: #fff;
+    border-top: 0;
+}
+
+.orderTheme {
+    display: block;
+    font-size: 18px;
+    color: #000;
+    line-height: 34px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.orderRow {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.orderLabel {
+    font-size: 13px;
+    color: #666;
+    line-height: 20px;
+}
+
+.orderValueWrapper {
+    width: 180px;
+}
+
+.orderValue {
+    display: block;
+    max-width: 180px;
+    font-size: 13px;
+    color: #666;
+    line-height: 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.orderFileStatus {
+    color: #c5752d;
+}
+
+.actionBtn {
+    margin: 5px auto;
+    width: 120px;
+    height: 36px;
+    border-radius: 5px;
+    font-size: 12px;
+    color: #333;
+    line-height: 36px;
+    text-align: center;
+    background: #f5d822;
+}
+
+.actionBtnWrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    padding: 0 10px;
+}
+
+.endedBtn {
+    background: #ccc;
+    color: #fff;
+}
+
+.endBtn {
+    background: #fff;
+    border: 1px solid #ccc;
+}
+
+.startedBtn {
+    width: 75px;
+}
+
+@media screen and (min-width: 1440px) {
+    .headerContent .orderContainer {
+        width: 1264px !important;
+    }
 }
