--- a/src/pages/login/Login.less
+++ b/src/pages/login/Login.less
@@ -1,7 +1,7 @@
 
 @import url('../../common.less');
 
-.login-container {
+.loginContainer {
     width: 100%;
     height: 100%;
     display: flex;
@@ -9,70 +9,85 @@
     align-items: center;
     background-image: url(../../assets/images/login_bg.jpg);
     background-size: cover;
+    background-position: center;
 
-    .login-content {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: 500px;
-        height: 500px;
-        margin-top: -250px;
-        margin-left: -250px;
-        background: rgba(0, 0, 0, 0.6);
-        border-radius: 5px;
+    .loginContent {
+        // background: rgba(0, 0, 0, 0.6);
 
         .logo {
             display: block;
-            width: 80px;
-            height: 80px;
-            margin: 15% auto;
-            background-image: url(../../assets/images/logo.png);
-            background-size: cover;
+            // width: 300px;
+            width: 200px;
+            height: 60px;
+            margin: auto;
+            margin-bottom: 43px;
         }
 
-        .input-wrapper {
+        .row {
             display: flex;
             flex-direction: row;
-            margin-top: 30px;
-            padding: 0 20%;
             justify-content: center;
             align-items: center;
+            margin: auto;
+            margin-top: 12px;
+            width: 296px;
+            height: 40px;
 
-            .user-input, .verifycode-input {
-                width: 100%;
-                height: 45px;
-                font-size: @base-font-bigSize;
-                color: #333333;
-                border-radius: 3px;
-                background: rgba(255, 255, 255, 0.8);
-            }
-            
-            .verify-button {
-                width: 160px;
-                height: 45px;
-                border-radius: 3px;
-                margin-left: 30px;
-                color: @base-color-blue;
-                font-size: @base-font-size;
-                border-color: @base-color-blue;
-                background: rgba(0, 0, 0, 0);
-            }
-            
-            .submit-area {
+            .inputRow {
+                height: 40px;
+                flex: 2;
                 display: flex;
+                flex-direction: row;
                 justify-content: center;
-                margin: auto;
-                width: 100%;
-                .login-button {
-                    height: 50px;
-                    background: @base-color-blue;
-                    font-size: @base-font-bigSize;
-                    color: @base-color-white;
-                    border-radius: 3px;
-                    flex: 7;
-                    border: 0;
+                align-items: center;
+                border-radius: 5px;
+                background: #eee;
+
+                .inputIconWrapper {
+                    width: 40px;
+                    height: 40px;
+                    padding: 12px 10px;
+                }
+
+                .inputIcon {
+                    display: block;
+                    width: 16px;
+                    height: 16px;
+                }
+
+                .userInput, .verifycodeInput {
+                    width: 100%;
+                    height: 22px;
+                    font-size: 15px;
+                    border-left: 1px solid #ccc;
+                    color: #666;
+                    background: #eee;
                 }
             }
+        }
+
+        .verifyBtn {
+            width: 120px;
+            height: 40px;
+            margin-left: 10px;
+            border-radius: 5px;
+            text-align: center;
+            line-height: 40px;
+            color: #333;
+            font-size: 15px;
+            background: #ffe100;
+        }
+
+        .loginBtn {
+            margin-top: 20px;
+            width: 296px;
+            height: 40px;
+            text-align: center;
+            line-height: 40px;
+            color: #333;
+            font-size: 15px;
+            border-radius: 5px;
+            background: #ffe100;
         }
     }
 
