--- a/src/pages/home/home.less
+++ b/src/pages/home/home.less
@@ -30,14 +30,14 @@
 
             .userAvatar {
                 display: block;
-                // margin-right: 5px;
+                margin-right: 5px;
                 width: 40px;
                 height: 40px;
                 border-radius: 20px;
             }
 
             .userName {
-                font-size: 16px;
+                font-size: 14px;
                 color: #fff;
                 line-height: 64px;
             }
